Spam Detector.ipynb

--- a/Spam Detector.ipynb
+++ b/Spam Detector.ipynb
@@ -238,7 +238,7 @@
    "source": [
     "import pickle\n",
     "pickle.dump(model, open('spam.pkl','wb'))\n",
-    "model1 = pickle.load(open('spam.pkl','rb'))\n"
+    "#model1 = pickle.load(open('spam.pkl','rb'))\n"
    ]
   },
   {
@@ -255,9 +255,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Happy Coding"
-   ]
   }
  ],
  "metadata": {
