--- a/Spam Detector.ipynb
+++ b/Spam Detector.ipynb
@@ -972,13 +972,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "pickle.dump(model, open('spam.pkl','wb'))\n",
-    "model1 = pickle.load(open('spam.pkl','rb'))\n"
+    "#model1 = pickle.load(open('spam.pkl','rb'))\n"
    ]
   },
   {
